--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html>
 <head>
     <title>psMap Demo</title>
-    <script src="js/psMap.js" type="text/javascript"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="js/psMap.js"></script>
 </head>
 <body>
 
 <h1>psMap Demo</h1>
 
-<div id="map"> </div>
+<div id="map"></div>
 
 </body>
 </html>
