Map CSS for demo has been added, giving map div some height, etc.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <title>psMap Demo</title>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="js/psMap.js"></script>
+
+    <link rel="stylesheet" type="text/css" href="css/psMap.css" />
 </head>
 <body>
 
